# academic-identity-verifier-jp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MISUSE_POLICY.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: test.yml
ISSUE_TEMPLATE/: general_issue.md
docs/: philosophy.md  plagiarism-checklist.md
src/identity_verifier/: __init__.py  __main__.py  api.py  cli.py  core.py
test/: test_core.py
tests/: test_api.py
