[project]
name = "identity-verifier"
version = "0.1.0"
description = "A non-adjudicative system for assessing public verifiability of claimed identities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
